--- a/Notes.Identity/appsettings.json
+++ b/Notes.Identity/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "DbConnection":  "Data Source=Platinum.Auth.db",
+  "DbConnection":  "Data Source=Yehor.Auth.db",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
